--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
     <!-- Scripts -->
     <script src="js/databases.js"></script>
     <script src="js/calculations.js"></script>
-    <script src="js/MSQXmlExporter_withMapping.js"></script>
-<script src="js/tuneGenerator.js"></script>
+    <script src="js/msqTemplate.js"></script>
+    <script src="js/tuneGenerator.js"></script>
 </body>
 </html>
