--- a/index.html
+++ b/index.html
@@ -469,9 +469,12 @@
     </div>
 
     <!-- Scripts -->
-    <script src="js/databases.js"></script>
-    <script src="js/calculations.js"></script>
-    <script src="js/msqTemplate.js"></script>
-    <script src="js/tuneGenerator.js"></script>
+<!-- Make sure these are loaded in order -->
+<script src="MSQXmlExporter_withMapping.js"></script>
+<script src="databases.js"></script>
+<script src="calculations.js"></script>
+<script src="msqTemplate.js"></script>
+<script src="tuneGenerator.js"></script>
+
 </body>
 </html>
